<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scoreButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionOne" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q1a1" />

                <RadioButton
                    android:id="@+id/radioButtonQ1A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q1a2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q1a3" />

            </RadioGroup>


            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@android:color/background_dark"
                android:visibility="visible" />

            <TextView
                style="@style/QuestionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionTwo" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a1" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a2" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a3" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@android:color/background_dark"
                android:visibility="visible" />


            <TextView
                style="@style/QuestionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionThree" />

            <EditText
                android:id="@+id/questionThreeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/q3Hint"
                android:importantForAutofill="no"
                android:inputType="" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@android:color/background_dark"
                android:visibility="visible" />

            <TextView
                style="@style/QuestionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionFour" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q4a1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q4a2" />

                <RadioButton
                    android:id="@+id/radioButtonQ4A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q4a3" />

            </RadioGroup>


            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@android:color/background_dark"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/end"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/scoreButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="scoreTest"
        android:text="@string/scoreButtonText"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>